Mon Aug 12 17:53:08 2002  Ossama Othman  <ossama@uci.edu>

	* TAOACE.dsw:

	  Added new LoadManager and LoadMonitor projects to this
	  workspace.

	* TAOACE_Static.dsw:

	  Removed old LoadBalancer project from this workspace.

	* orbsvcs/orbsvcs/LoadBalancing/LB_Component.h:

	  Include "LoadBalancing_export.h" to pull Windows librar export
	  macros.

	* orbsvcs/orbsvcs/CosLoadBalancing.dsp:

	  Added new sources to this project file.

	* orbsvcs/orbsvcs/LoadBalancing.dsp:
	* orbsvcs/orbsvcs/LoadBalancing_Static.dsp:

	  Removed these project files.  They were used for the old load
	  balancer prototype.

Mon Aug 12 17:27:30 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/LoadBalancer/LoadBalancer_Service.dsp:

	  Removed this project file.  It was used for the old load
	  balancer prototype.

	* orbsvcs/LoadBalancer/LoadManager.bor:
	* orbsvcs/LoadBalancer/LoadManager.dsp:
	* orbsvcs/LoadBalancer/LoadMonitor.bor:
	* orbsvcs/LoadBalancer/LoadMonitor.dsp:
	* orbsvcs/LoadBalancer/Makefile:
	* orbsvcs/LoadBalancer/Makefile.LoadManager:
	* orbsvcs/LoadBalancer/Makefile.LoadMonitor:
	* orbsvcs/LoadBalancer/Makefile.bor:

	  Added/fixed projects and Makefiles so that both the LoadManager
	  and LoadMonitor binaries are built.  Previously, only the
	  LoadManager was built.

Mon Aug 12 08:31:03 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/LoadBalancing/LB_LoadAlert.h (TAO_LB_LoadAlert):

	  This servant is no longer reference counted.

	  (~TAO_LB_LoadAlert):

	  Commented out protected destructor.  A protected destructor is
	  no longer needed since reference counting is no a no-op.

	* orbsvcs/orbsvcs/LoadBalancing/LB_LoadAlert.cpp (~TAO_LB_LoadAlert):

	  Likewise.

	* orbsvcs/orbsvsc/LoadBalancing/LB_LoadManager.h (init):
	* orbsvcs/orbsvsc/LoadBalancing/LB_LoadManager.cpp (init):

	  This method now accepts a pseudo-reference to the ORB.  The
	  LoadManager must register itself with the ORB's
	  resolve_initial_references() mechanism.
